--- a/hike/templates/hike/bm.html
+++ b/hike/templates/hike/bm.html
@@ -105,6 +105,7 @@
     <li><a class="dropdown-item" href="{% url 'bmfilter' pk=8 %}">прогулка</a></li>
     <li><a class="dropdown-item" href="{% url 'bmfilter' pk=9 %}">поездка на выходные</a></li>
     <li><a class="dropdown-item" href="{% url 'bmfilter' pk=10 %}">аудио</a></li>
+    <li><a class="dropdown-item" href="{% url 'bmfilter' pk=11 %}">работа</a></li>
   </ul>
 </div> </center>
       <br>
