--- a/hike/templates/hike/family.html
+++ b/hike/templates/hike/family.html
@@ -73,7 +73,7 @@
        <center>   <h3>Фильтры</h3> </center>
                 {#форма для поиска по полям #}
 {#стандартная#}
-    <form action="/hike/it/searchresult/" method="GET">
+    <form action="/hike/family/searchresult/" method="GET">
                     {% csrf_token %}
                     {% crispy form %}
                 </form>
