--- a/users/templates/users/personal.html
+++ b/users/templates/users/personal.html
@@ -18,4 +18,7 @@
        <a href="{% url 'kareliahistory' %}" class="btn btn-success mt-3 ml-1" style="width: 250px">История Карелии</a>
        <a href="{% url 'example' %}" class="btn btn-success mt-3 ml-1" style="width: 250px">Пример</a>
     </div>
+    <div style="text-align: center;">
+       <a href="{% url 'family' %}" class="btn btn-success mt-3 ml-1" style="width: 250px">История семьи</a>
+    </div>
 {% endblock %}
