--- a/hike/templates/hike/family.html
+++ b/hike/templates/hike/family.html
@@ -29,7 +29,7 @@
     <tr>
         <td > 
              <p><b>№</b>{{ obj.pk }}</p>
-           <p><b>Заголовок:&nbsp;</b>{{ obj.typedefault_if_none:" " }}</p>
+           <p><b>Заголовок:&nbsp;</b>{{ obj.type |default_if_none:" " }}</p>
          {% autoescape off %} <p><b>Текст:&nbsp;</b>{{ obj.text }}</p>{% endautoescape %}
           <p>
 
