--- a/hike/templates/hike/family.html
+++ b/hike/templates/hike/family.html
@@ -44,7 +44,7 @@
                 {% endif %}
             <br> </p>
       <div class="media text-muted pt-3">
-      <img class="bd-placeholder-img mr-2 rounded"  src="{{ obj.photo.url }}">
+      <img class="bd-placeholder-img mr-2 rounded" width=60% height=60% src="{{ obj.photo.url }}">
        
         </td>
     </tr>
