--- a/hike/templates/hike/bm.html
+++ b/hike/templates/hike/bm.html
@@ -49,7 +49,7 @@
 
                     
                 <p>    {% if not obj.done  %}
-                        <form method="post" pks=obj.vk>
+                        <form method="post" name={{obj.vk}}>
                             {% csrf_token %}
                             {{ form.as_p }}
                             <button class="btn btn-outline-warning" type="submit">Ok</button>
