--- a/hike/templates/hike/bm.html
+++ b/hike/templates/hike/bm.html
@@ -49,7 +49,7 @@
 
                     
                 <p>    {% if not obj.done  %}
-                        <form method="post" value="{{obj.id}}" name="my_object">
+                        <form method="post" value="168" name="my_object">
                             {% csrf_token %}
                             {{ form.as_p }}
                             <button class="btn btn-outline-warning" type="submit">Ok</button>
